[tool.poetry]
name = "ecs310"
version = "0.1.0"
description = ""
authors = ["Sattwik Sahu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
